--- a/src/index.pug
+++ b/src/index.pug
@@ -1,6 +1,7 @@
 extends pug/_layout
 
 block body
+  //include modules/preloader/preloader
   include modules/about/about
   include modules/courses/courses
   include modules/modules/modules
