--- a/src/modules/books/books.pug
+++ b/src/modules/books/books.pug
@@ -2,15 +2,21 @@
   .books__title Если вам не терпится начать#[br]уже сейчас, вы можете почитать эти книги:
   .books__items
     .books__item: .books__card
-      .books__author Франческо Бонами
-      .books__header Я тоже так могу
+      .books__content
+        .books__author Франческо Бонами
+        .books__header Я тоже так могу
+      a.books__button(href='#') СКАЧАТЬ
     .books__item: .books__card
-      .books__author Хэл Фостер, Розалинда Краусс, Ив-Ален Буа, Бенджамин Бухло, Дэвид Джозелит
-      .books__header Искусство с 1900 года: модернизм, антимодернизм, постмодернизм
+      .books__content
+        .books__author Хэл Фостер, Розалинда Краусс, Ив-Ален Буа, Бенджамин Бухло, Дэвид Джозелит
+        .books__header Искусство с 1900 года: модернизм, антимодернизм, постмодернизм
+      a.books__button(href='#') СКАЧАТЬ
     .books__item: .books__card
-      .books__author Оссиаaн Уорд
-      .books__header Искусство смотреть. Как воспринимать современное искусство
+      .books__content
+        .books__author Оссиаaн Уорд
+        .books__header Искусство смотреть. Как воспринимать современное искусство
     .books__item: .books__card
-      .books__author Джеймс Элкинс
-      .books__header Почему нельзя научить искусству
+      .books__content
+        .books__author Джеймс Элкинс
+        .books__header Почему нельзя научить искусству
 
