--- a/src/modules/courses/courses.pug
+++ b/src/modules/courses/courses.pug
@@ -21,6 +21,16 @@
       .cards__item: .cards__card(style='background-image:url(images/08.jpg)') Free-run#[br]Still-life
       .cards__item: .cards__card(style='background-image:url(images/09.jpg)') Скетчинг
       .cards__item: .cards__card(style='background-image:url(images/10.jpg)') Free-run#[br]Still-life
+      .cards__item: .cards__card(style='background-image:url(images/09.jpg)') Скетчинг
+      .cards__item: .cards__card(style='background-image:url(images/10.jpg)') Free-run#[br]Still-life
+      .cards__item: .cards__card(style='background-image:url(images/09.jpg)') Скетчинг
+      .cards__item: .cards__card(style='background-image:url(images/10.jpg)') Free-run#[br]Still-life
+      .cards__item: .cards__card(style='background-image:url(images/09.jpg)') Скетчинг
+      .cards__item: .cards__card(style='background-image:url(images/10.jpg)') Free-run#[br]Still-life
+      .cards__item: .cards__card(style='background-image:url(images/09.jpg)') Скетчинг
+      .cards__item: .cards__card(style='background-image:url(images/10.jpg)') Free-run#[br]Still-life
+      .cards__item: .cards__card(style='background-image:url(images/09.jpg)') Скетчинг
+      .cards__item: .cards__card(style='background-image:url(images/10.jpg)') Free-run#[br]Still-life
 
   .courses__more
     button ЕЩЕ
