--- a/src/modules/module/module.pug
+++ b/src/modules/module/module.pug
@@ -2,46 +2,49 @@
   .module__container
     h1.module__title: span: span
       | ВАШИ ЛУЧШИЕ 15
-  .module__row
-    .module__container
-      .module__info
-        .module__header Информация#[br]о модуле:
-        p Портфолио — это совокупность осуществленных работ, а также запланированных и смоделированных проектов, которая является небольшой галереей, персональной выставкой работ художника или дизайнера, только выполненной в виде каталога. По разнообразию и качеству арт-проектов университет или галерея судят о возможностях, теоретических знаниях и практических навыках студента и художника. Оно служит залогом конкурентоспособности и креативности, именно поэтому грамотно оформленное портфолио, вкупе с подробным резюме, увеличивает ваши шансы на трудоустройство или  оступление.
+  .module__rows
+    .module__row
+      .module__container
+        .module__info
+          .module__header Информация#[br]о модуле:
+          p Портфолио — это совокупность осуществленных работ, а также запланированных и смоделированных проектов, которая является небольшой галереей, персональной выставкой работ художника или дизайнера, только выполненной в виде каталога. По разнообразию и качеству арт-проектов университет или галерея судят о возможностях, теоретических знаниях и практических навыках студента и художника. Оно служит залогом конкурентоспособности и креативности, именно поэтому грамотно оформленное портфолио, вкупе с подробным резюме, увеличивает ваши шансы на трудоустройство или  оступление.
 
-    .gallery.module__aside
-      .gallery__slider
-        .gallery__items
-          .gallery__item.module__image(style='background-image: url(images/01.jpg)')
-          .gallery__item.module__image(style='background-image: url(images/02.jpg)')
-          .gallery__item.module__image(style='background-image: url(images/03.jpg)')
-      .nav.module__nav
-        button.nav__button.nav__button--prev: +svg('arrow')
-        button.nav__button.nav__button--next: +svg('arrow')
+      .gallery.module__aside
+        .gallery__slider
+          .gallery__items
+            .gallery__item.module__image(style='background-image: url(images/01.jpg)')
+            .gallery__item.module__image(style='background-image: url(images/02.jpg)')
+            .gallery__item.module__image(style='background-image: url(images/03.jpg)')
+        .nav.module__nav
+          button.nav__button.nav__button--prev: +svg('arrow')
+          button.nav__button.nav__button--next: +svg('arrow')
 
-  .module__row.module__row--reverse
-    .module__container
-      .module__info
-        p Благодаря модулю вы подготовите первоклассное портфолио художника и познакомитесь с нюансами и спецификой поступления в российские и зарубежные художественные университеты и школы. В рамках практических курсов вы оздадите как минимум 10 проектов в разных стилях и жанрах современного искусства, что позволит вам в итоге выбрать то направление, что вам особенно нравится или интересно.
-        p Курсы «Круиз абитуриента» и «Один не дома» не просто помогут вам выбрать школу вашей мечты в России или за рубежом, но и подготовиться к жизни в стенах университета: мы поговорим об обучении и проживании в другом городе или стране, а также о том, как разнообразить свои студенческие годы и сделать их незабываемыми.
+    .module__row.module__row--reverse
+      .module__container
+        .module__info
+          p Благодаря модулю вы подготовите первоклассное портфолио художника и познакомитесь с нюансами и спецификой поступления в российские и зарубежные художественные университеты и школы. В рамках практических курсов вы оздадите как минимум 10 проектов в разных стилях и жанрах современного искусства, что позволит вам в итоге выбрать то направление, что вам особенно нравится или интересно.
+          p Курсы «Круиз абитуриента» и «Один не дома» не просто помогут вам выбрать школу вашей мечты в России или за рубежом, но и подготовиться к жизни в стенах университета: мы поговорим об обучении и проживании в другом городе или стране, а также о том, как разнообразить свои студенческие годы и сделать их незабываемыми.
 
-    .gallery.module__aside
-      .gallery__slider
-        .gallery__items
-          .gallery__item.module__image(style='background-image: url(images/01.jpg)')
-          .gallery__item.module__image(style='background-image: url(images/02.jpg)')
-          .gallery__item.module__image(style='background-image: url(images/03.jpg)')
-      .nav.module__nav
-        button.nav__button.nav__button--prev: +svg('arrow')
-        button.nav__button.nav__button--next: +svg('arrow')
+      .gallery.module__aside
+        .gallery__slider
+          .gallery__items
+            .gallery__item.module__image(style='background-image: url(images/01.jpg)')
+            .gallery__item.module__image(style='background-image: url(images/02.jpg)')
+            .gallery__item.module__image(style='background-image: url(images/03.jpg)')
+        .nav.module__nav
+          button.nav__button.nav__button--prev: +svg('arrow')
+          button.nav__button.nav__button--next: +svg('arrow')
 
-  .module__row
-    .module__container
-      .module__info
-        p Входящий в модуль курс «Лаборатория кураторства» познакомит вас с новейшими практиками презентации художественных проектов и поможет глубже понять свою собственную практику и тенденции в области современной культурной политики и арт-менеджмента.
-        p Если для поступления в художественную школу или университет вам требуется выполнить специальные задания, которых нет в нашем списке, то мы в индивидуальном порядке разберем их на соответствующем последнем курсе.
+    .module__row
+      .module__container
+        .module__info
+          p Входящий в модуль курс «Лаборатория кураторства» познакомит вас с новейшими практиками презентации художественных проектов и поможет глубже понять свою собственную практику и тенденции в области современной культурной политики и арт-менеджмента.
+          p Если для поступления в художественную школу или университет вам требуется выполнить специальные задания, которых нет в нашем списке, то мы в индивидуальном порядке разберем их на соответствующем последнем курсе.
 
-    .module__aside
-      .module__blockquote: div
-        p Мы собрали и структурировали этот модуль таким образом, чтобы студенты, прошедшие его, были полностью готовы к важнейшему шагу в своей жизни — выбору профессии — который будет предопределять всю их дальнейшую жизнь. Найти дело и занятие по душе — залог насыщенной и продуктивной деятельности, которая станет основой успешной карьеры и интересной жизни. В рамках занятий мы создадим общую творческую и интеллектуальную среду, где будем обсуждать проекты, задавать вопросы, получать новый опыт и говорить о современном искусстве.
+      .module__aside
+        .module__blockquote: div
+          p Мы собрали и структурировали этот модуль таким образом, чтобы студенты, прошедшие его, были полностью готовы к важнейшему шагу в своей жизни — выбору профессии — который будет предопределять всю их дальнейшую жизнь. Найти дело и занятие по душе — залог насыщенной и продуктивной деятельности, которая станет основой успешной карьеры и интересной жизни. В рамках занятий мы создадим общую творческую и интеллектуальную среду, где будем обсуждать проекты, задавать вопросы, получать новый опыт и говорить о современном искусстве.
 
+  .module__more
+    button ЕЩЕ
 
