--- a/src/modules/moduleCourses/moduleCourses.pug
+++ b/src/modules/moduleCourses/moduleCourses.pug
@@ -4,7 +4,10 @@
     .moduleCourses__col
       .moduleCourses__item
         .moduleCourses__header: span Круиз абитуриента
-        .moduleCourses__body: .moduleCourses__inner На наших курсах мы будем говорить об исторических изменениях, концептуальных предпосылках и социокультурной проблематике современности, которые только и сделали появление сотетрогагу а возможным. Понимая логику функционирования современного искусства, вы с легкостью отличите мощный концептуальный проект от посредственного
+        .moduleCourses__body
+          .moduleCourses__inner
+            p На наших курсах мы будем говорить об исторических изменениях, концептуальных предпосылках и социокультурной проблематике современности, которые только и сделали появление сотетрогагу а возможным. Понимая логику функционирования современного искусства, вы с легкостью отличите мощный концептуальный проект от посредственного
+            a.moduleCourses__button(href='#') ПОДРОБНЕЕ
       .moduleCourses__item
         .moduleCourses__header: span Линия. Пятно. Плоскогубцы
         .moduleCourses__body: .moduleCourses__inner На наших курсах мы будем говорить об исторических изменениях, концептуальных предпосылках и социокультурной проблематике современности, которые только и сделали появление сотетрогагу а возможным. Понимая логику функционирования современного искусства, вы с легкостью отличите мощный концептуальный проект от посредственного
