--- a/src/modules/modules/modules.pug
+++ b/src/modules/modules/modules.pug
@@ -21,5 +21,10 @@
       .modules__content: .modules__inner
         p В рамках нашего модуля “Медиумспецифичность или мультимедиальность” вы узнаете о многообразии современных художественных средств, создадите свои арт-проекты, используя различные медиумы, и сможете определится со своим стилем и направлением. Теоретические курсы о кураторстве и истории современного постмодернистского искусства расскажут о новейших практиках презентации такого искусства и его специфике.
         .modules__button: a(href='#') ПОДРОБНЕЕ
+    .modules__item
+      .modules__image(style='background-image: url(images/03.jpg)'): span Медиумспецифичность#[br]или мультимедиальность?
+      .modules__content: .modules__inner
+        p В рамках нашего модуля “Медиумспецифичность или мультимедиальность” вы узнаете о многообразии современных художественных средств, создадите свои арт-проекты, используя различные медиумы, и сможете определится со своим стилем и направлением. Теоретические курсы о кураторстве и истории современного постмодернистского искусства расскажут о новейших практиках презентации такого искусства и его специфике.
+        .modules__button: a(href='#') ПОДРОБНЕЕ
   .modules__more
     button ЕЩЕ
