--- a/src/modules/notFound/notFound.styl
+++ b/src/modules/notFound/notFound.styl
@@ -1,35 +1,13 @@
 .notFound
   text-align: center;
-  padding: 110px 0
-  background: $grey2
-  overflow: hidden;
+  padding: 110px 20px
   position: relative;
   +media('md')
-    padding: 54px 0
-
-  &:before, &:after
-    content ''
-    background: url(../../images/wood-bg-black.png);
-    width 367px
-    height 370px
-    position: absolute;
-
-  &:before
-    right: 50%
-    margin-right: 490px;
-    top: -190px;
-
-  &:after
-    left: 50%
-    margin-left: 470px;
-    bottom: -190px;
-
-  h1
-    font-size: 48px
-    margin-bottom: 20px
+    padding: 54px 20px
 
   img
     max-width 100%
-    width: 770px
-    margin: -5px 0
+    height: auto;
+    //width: 770px
+    margin: 0 0 50px
 
