--- a/src/style.styl
+++ b/src/style.styl
@@ -46,5 +46,9 @@
 @import "modules/modulesList/modulesList";
 @import "modules/search/search";
 @import "modules/form/form.styl";
+@import "modules/preloader/preloader.styl";
+@import "modules/mentors/mentors.styl";
+@import "modules/history/history.styl";
+@import "modules/students/students.styl";
 
 @import "stylus/blocks/wpcf7.styl";
