--- a/src/modules/course/course.pug
+++ b/src/modules/course/course.pug
@@ -5,12 +5,16 @@
       | FREE-RUN STILL-LIFE FREE-RUN STILL-LIFE
   .course__row
     .course__container
-      .course__info
-        .course__header Информация#[br]о курсе:
-        .course__text Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое. Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на верхушке которого еле держалось готовое вот-вот.
-        .course__footer
-          .register__price 14 500 ₽
-          a.register__button(href='#') ЗАРЕГИСТРИРОВАТЬСЯ
+      .course__placeholder
+      .course__header Информация#[br]о курсе:
+      .course__text
+        p Проснувшись однажды утром после беспокойного сна,
+        //p Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое. Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на верхушке которого еле держалось готовое вот-вот.
+        //p Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое. Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на верхушке которого еле держалось готовое вот-вот.
+        //p Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое. Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на верхушке которого еле держалось готовое вот-вот.
+      .course__footer
+        .register__price 14 500 ₽
+        a.register__button(href='#') ЗАРЕГИСТРИРОВАТЬСЯ
 
     .gallery.course__aside
       .gallery__slider
