--- a/src/modules/footer/footer.styl
+++ b/src/modules/footer/footer.styl
@@ -72,7 +72,7 @@
         &:last-child
           margin-right: 0
 
-        & > a
+        & > a, & > span
           display: none;
 
         & > ul
