--- a/src/modules/header/header.styl
+++ b/src/modules/header/header.styl
@@ -8,6 +8,16 @@ $search_height = 90px;
   +media('md')
     height: 350px
 
+  &--small
+    height: 180px
+    +media('md')
+      height: 120px
+
+    & ^[0]__bg
+      filter blur(10px)
+
+      &:after
+        opacity: .75
 
   &--search
     & ^[0]__bg
@@ -117,21 +127,40 @@ $search_height = 90px;
   &__menu
     margin-bottom: 17px
     +media('md')
-      display: none;
+      position: fixed;
+      top: 0
+      left: 0
+      width: 100%
+      height: 100%
+      visibility: hidden;
+      opacity: 0
+      z-index: -1
+      transform translateY(-40px)
+      anim(.2s)
+
+      &--active
+        background: #f6f6f6
+        opacity: 1
+        visibility: visible;
+        z-index: 1000
+        transform none
 
     ul
       display: flex;
       align-items center
       margin: 0
       padding: 0
+      +media('md')
+        margin-top: 80px
+        flex-direction column
 
     li
       margin: 0 27px
       padding: 0
       @media screen and (max-width: 1550px)
         margin: 0 10px
-      //+media('lg')
-
+      +media('md')
+        margin-bottom: 20px
 
       &:before
         display: none;
@@ -146,6 +175,27 @@ $search_height = 90px;
 
       &:hover
         color: #ec3434
+
+      +media('md')
+        color: #000000
+
+  &__close
+    display: none;
+    +media('md')
+      position: absolute;
+      width: 60px
+      height: 60px
+      display: flex;
+      align-items center
+      justify-content center
+      background: #ffffff
+      border: 0
+      top: 0
+      left: 0
+      svg
+        width: 24px
+        height: 18px
+        fill #26232d
 
   &__row
     display: flex;
