--- a/src/modules/modules/modules.styl
+++ b/src/modules/modules/modules.styl
@@ -59,6 +59,14 @@
     +media('md')
       padding: 0 4px
 
+  &__items
+    &--active
+      & ^[0]__item:nth-child(n+4)
+        visibility: visible;
+        opacity: 1
+        position: static
+        z-index auto
+
   &__item
     display: flex;
     min-height 615px
@@ -71,6 +79,14 @@
     +media('md')
       flex-direction column
       min-height auto
+
+    &:nth-child(n+4)
+      visibility: hidden;
+      opacity: 0
+      position: absolute;
+      z-index -1
+      anim()
+
 
   &__content
     flex: 1
@@ -122,7 +138,6 @@
   &__button
     height: 50px
     margin-top: 60px;
-    text-decoration: none;
     +media('md')
       height: 34px
       margin-top: 14px
@@ -135,6 +150,7 @@
       font-weight: bold;
       padding: 2px 16px 5px 13px;
       display: inline-block;
+      text-decoration: none;
       anim()
       +media('md')
         font-size: 20px
