--- a/src/stylus/blocks/btn.styl
+++ b/src/stylus/blocks/btn.styl
@@ -8,6 +8,7 @@
   font-weight: bold;
   background: #ec3434
   font-size: 24px
+  text-decoration: none;
   color: $black
   text-align: center;
   border: 0
