--- a/src/stylus/blocks/checkbox.styl
+++ b/src/stylus/blocks/checkbox.styl
@@ -13,8 +13,10 @@
     padding-left: 54px
     anim()
     +media('md')
-      font-size: 8px
-      padding-left: 27px
+      font-size: 16px
+      padding-left: 45px;
+      padding-top: 3px;
+      line-height: 1.5;
 
     &:before, &:after
       content: ''
@@ -29,6 +31,9 @@
       background: #f6f6f6
       border: 4px solid #e8e7e7
       anim()
+      +media('md')
+        width: 30px
+        height: 30px
 
     &:after
       position: absolute
@@ -39,6 +44,11 @@
       background: #70cb4c
       opacity 0
       anim()
+      +media('md')
+        width: 10px;
+        height: 10px;
+        top: 10px;
+        left: 10px;
 
   input:checked ~ span
     &:after
@@ -46,6 +56,14 @@
 
     &:before
       border-color: #70cb4c
+
+  input:disabled ~ span
+    opacity: .3
+    //&:before
+    //  background: #f6f6f6
+    //  border: 4px solid #e8e7e7
+    //&:after
+    //  opacity: 0
 
   &:hover
     span
