--- a/src/stylus/blocks/typography.styl
+++ b/src/stylus/blocks/typography.styl
@@ -60,7 +60,8 @@ a
 
   &:hover
     text-decoration: none;
-    //border-color: $brown2
+
+//border-color: $brown2
 
 //&:hover
 //  border-color: #e7533b
@@ -76,26 +77,8 @@ ul, ol
       margin-bottom: .75em
 
 ul
-  li
-    position: relative;
-    padding-left: 39px
-    +media('md')
-      padding-left: 29px
-
-    &:before
-      content: ''
-      position: absolute;
-      display: block
-      width: 25px
-      height: 25px
-      border: 8px solid $brown2
-      background: $white
-      left: 0
-      top: 0
-      +media('md')
-        width: 17px
-        height: 17px
-        border-width: 5px
+  list-style disk
+  padding-left: 1.55em
 
 ol
   counter-reset: list;
@@ -106,17 +89,18 @@ del, s
   text-decoration: line-through
 
 blockquote
-  background: $brown2 url(../../images/wood-bg-white.png) -50px -236px no-repeat
-  color: $white
-  font-size: 18px
-  line-height: 1.6
-  padding: 32px 40px 33px
+  background: #1a1616;
+  color: #fff;
+  font-size: 23px;
+  line-height: 1.45;
+  font-weight: 700;
+  padding: 7% 10.5% 3%
   position: relative;
-  overflow: hidden;
+  z-index: 1;
+  max-width: 780px;
   +media('md')
-    font-size: 12px
-    line-height: 1.9
-    padding: 24px 29px 23px
+    font-size: 16px;
+    line-height: 1.5;
 
 .wp-block-image
   margin-bottom: 3rem
@@ -149,3 +133,61 @@ hr
   margin: 60px 0 50px;
   +media('md')
     margin: 30px
+
+.title
+  position: relative;
+  font-size: 60px
+  line-height: 80px
+  font-weight: bold;
+  color: #ffffff
+  margin-bottom: 115px;
+  margin-top: -5px
+  +media('md')
+    margin-top: -3px
+    margin-left: 0
+    font-size: 30px
+    line-height: 44px
+    margin-bottom: 50px
+
+  &:before, &:after
+    content: ''
+    position: absolute;
+
+  &:after
+    right: 100%
+    top: 3px
+    height: 100%
+    width: 1000px
+    background: repeating-linear-gradient(#1a1616 0px, #1a1616 73px, transparent 73px, transparent 80px)
+    z-index: -1
+    +media('md')
+      background: repeating-linear-gradient(#1a1616 0px, #1a1616 37px, transparent 37px, transparent 44px)
+
+  // Красная полоса
+
+  &:before
+    background: #ec3434
+
+  & > span
+    background: $black
+    position: relative;
+    box-shadow (-18px 0 0 0 $black) , 18px 0 0 0 $black;
+
+    & > span
+      position: relative;
+      z-index: 1;
+
+    &:before, &:after
+      content: ''
+      position: absolute;
+
+    // Красный круг
+
+    &:after
+      background: #ec3434
+      border-radius: 50%
+
+    // Черная полоска
+
+    &:before
+      background: #1a1616;
